--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,11 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "SistemaGerenciamentoMedico/wsgi.py"
+            "dest": "SistemaGerenciamentoMedico/wsgi.py",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+              "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 }
