--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,25 @@
 {
-    "builds": [{
-        "src": "SistemaGerenciamentoMedico/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.2" }
-    }],
+    "builds": [
+        {
+            "src": "SistemaGerenciamentoMedico/wsgi.py",
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.12"
+            }
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
             "dest": "SistemaGerenciamentoMedico/wsgi.py",
             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
             "headers": {
-              "Access-Control-Allow-Origin": "*"
+                "Access-Control-Allow-Origin": "*"
             }
         }
-    ]
+    ],
+    "env": {
+        "DISABLE_COLLECTSTATIC": "1"
+    }
 }
